--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context="com.example.andoid.quizapp.MainActivity">
 
     <LinearLayout
         android:id="@+id/quiz_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -23,7 +24,7 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:text="@string/question1"
             android:textColor="@color/primaryText"
-            android:textSize="18sp" />
+            android:textSize="@dimen/main_text_size" />
 
         <EditText
             android:id="@+id/question1_answer"
@@ -37,7 +38,7 @@
             android:layout_height="wrap_content"
             android:text="@string/question2"
             android:textColor="@color/primaryText"
-            android:textSize="18sp" />
+            android:textSize="@dimen/main_text_size" />
 
         <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
@@ -74,7 +75,7 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:text="@string/question3"
             android:textColor="@color/primaryText"
-            android:textSize="18sp" />
+            android:textSize="@dimen/main_text_size" />
 
         <CheckBox
             android:id="@+id/question3_choice1"
@@ -108,7 +109,7 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:text="@string/question4"
             android:textColor="@color/primaryText"
-            android:textSize="18sp" />
+            android:textSize="@dimen/main_text_size" />
 
         <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
@@ -142,7 +143,7 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:text="@string/question5"
             android:textColor="@color/primaryText"
-            android:textSize="18sp" />
+            android:textSize="@dimen/main_text_size" />
 
 
         <CheckBox
@@ -171,7 +172,7 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:text="@string/question6"
             android:textColor="@color/primaryText"
-            android:textSize="18sp" />
+            android:textSize="@dimen/main_text_size" />
 
         <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
